<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cal_cal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textSize="@dimen/textSIZEBUTTON" >
    </EditText>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="@dimen/textSIZEBUTTON"/>
        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-"
            android:textSize="@dimen/textSIZEBUTTON"/>





        <Button
            android:id="@+id/dele"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dele"
            android:textSize="@dimen/textSIZEBUTTON"/>
        <Button
            android:id="@+id/ym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ym"
            android:textSize="@dimen/textSIZEBUTTON"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/b1"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="@dimen/textSIZEBUTTON" />
        <Button
            android:id="@+id/b2"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="@dimen/textSIZEBUTTON"/>
        <Button
            android:id="@+id/b3"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="@dimen/textSIZEBUTTON"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/b4"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="@dimen/textSIZEBUTTON"/>
        <Button
            android:id="@+id/b5"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="@dimen/textSIZEBUTTON"/>
        <Button
            android:id="@+id/b6"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="@dimen/textSIZEBUTTON"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/b7"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="@dimen/textSIZEBUTTON"/>
        <Button
            android:id="@+id/b8"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="8"
            android:textSize="@dimen/textSIZEBUTTON"/>
        <Button
            android:id="@+id/b9"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="9"
            android:textSize="@dimen/textSIZEBUTTON"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textSize="@dimen/textSIZEBUTTON"/>

        <Button
            android:id="@+id/rav"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rav"
            android:textSize="@dimen/textSIZEBUTTON" />


        <Button
            android:id="@+id/To"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/to"
            android:textSize="@dimen/textSIZEBUTTON"/>


    </LinearLayout>


</LinearLayout>